<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.example.viet.readfile.ClearableEditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/edit_city"
        android:inputType="textPersonName"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:drawablePadding="12dp"/>

    <com.example.viet.readfile.ClearableEditText
        android:id="@+id/edit_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_city"
        android:layout_alignStart="@+id/edit_city"
        android:layout_below="@+id/edit_city"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/edit_lat"
        android:inputType="numberDecimal|numberSigned"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:drawablePadding="12dp"/>

    <com.example.viet.readfile.ClearableEditText
        android:id="@+id/edit_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_lat"
        android:layout_alignStart="@+id/edit_lat"
        android:layout_below="@+id/edit_lat"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edit_long"
        android:inputType="numberDecimal|numberSigned"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:drawablePadding="12dp"/>

    <com.example.viet.readfile.ClearableEditText
        android:id="@+id/edit_timezone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_long"
        android:layout_alignStart="@+id/edit_long"
        android:layout_below="@+id/edit_long"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edit_timezone"
        android:inputType="textPersonName"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:drawablePadding="12dp"/>

    <TextView
        android:id="@+id/errMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_timezone"
        android:layout_alignStart="@+id/edit_timezone"
        android:layout_below="@+id/edit_timezone"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textColor="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/btn_ok"
        android:layout_below="@+id/edit_timezone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_ok"
        android:layout_alignBottom="@+id/btn_ok"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/btn_ok"
        android:layout_toRightOf="@+id/btn_ok"
        android:text="@string/btn_cancel" />
</RelativeLayout>